# wammy-plugin-template

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh
include/: PluginProcessor.h
modules/: CMakeLists.txt
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
